// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UnauthorizedWarningPageComponent snapshot > should match snapshot when admin role is set 1`] = `
<tm-unauthorized-warning-page
  role={[Function String]}
>
  <div
    class="text-center"
  >
    <div
      class="alert alert-light mx-auto"
    >
      <div
        class="d-flex align-items-start"
      >
        <img
          alt=""
          src="assets/images/angry.png"
        />
        <div
          class="align-left"
        >
          <h5>
            You are not authorized to view this page.
          </h5>
          <p
            class="mb-0"
          >
            <b>
              Reason:
            </b>
             You need to be an admin to access this page.
          </p>
        </div>
      </div>
      <hr />
      <a
        class="text-center"
        href="/web/front"
        tmrouterlink="/web/front"
      >
        Return to main page.
      </a>
    </div>
  </div>
</tm-unauthorized-warning-page>
`;

exports[`UnauthorizedWarningPageComponent snapshot > should match snapshot when student role is set 1`] = `
<tm-unauthorized-warning-page
  role={[Function String]}
>
  <div
    class="text-center"
  >
    <div
      class="alert alert-light mx-auto"
    >
      <div
        class="d-flex align-items-start"
      >
        <img
          alt=""
          src="assets/images/angry.png"
        />
        <div
          class="align-left"
        >
          <h5>
            You are not authorized to view this page.
          </h5>
          <p
            class="mb-0"
          >
            <b>
              Reason:
            </b>
             You are not enrolled as a student in any course.
          </p>
        </div>
      </div>
      <hr />
      <div
        class="align-left"
      >
        <p
          class="text-center"
        >
           To access student pages on TEAMMATES, you need to wait until an instructor adds you to a course. 
          <br />
           As a confirmation, TEAMMATES will send you instructions on how to access that particular course. 
        </p>
        <hr />
        <p
          class="align-left"
        >
           If you 'joined' a course in TEAMMATES using an account before, but cannot log in anymore, these are the possible reason(s): 
        </p>
        <ol
          class="align-left"
        >
          <li>
             You used a different account to access TEAMMATES in the past. In that case, you need to use the same account to access TEAMMATES again. Log out and re-log in using the other account. If you don't remember which account you used previously, email us from the same email account to which you receive TEAMMATES emails. 
          </li>
        </ol>
      </div>
      <hr />
      <a
        class="text-center"
        href="/web/front"
        tmrouterlink="/web/front"
      >
        Return to main page.
      </a>
    </div>
  </div>
</tm-unauthorized-warning-page>
`;
